-- Allow the DOM script object factory to turn XPConnect return values into proper nsIException objects. -- Make nsDOMClassInfo::ThrowJSException never throw null as an exception. -- Make XPCException::ToString grab the description of the result as well as the name.

bug 321831, r+sr=jst