mozilla/dom/src/base/nsDOMScriptObjectFactory.cpp
@@ -1,4 +1,5 @@
 /* -*- Mode: C++; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*-
+ * vim: set ts=2 sw=2 et tw=78:
  *
  * ***** BEGIN LICENSE BLOCK *****
  * Version: MPL 1.1/GPL 2.0/LGPL 2.1
@@ -51,6 +52,7 @@
  */
 
 #include "nsDOMScriptObjectFactory.h"
+#include "xpcexception.h"
 #include "nsScriptNameSpaceManager.h"
 #include "nsIObserverService.h"
 #include "nsJSEnvironment.h"
@@ -81,6 +83,7 @@ nsDOMScriptObjectFactory::nsDOMScriptObjectFactory()
 #ifdef MOZ_SVG
     xs->RegisterExceptionProvider(this, NS_ERROR_MODULE_SVG);
 #endif
+    xs->RegisterExceptionProvider(this, NS_ERROR_MODULE_XPCONNECT);
   }
 }
 
@@ -191,9 +194,26 @@ nsDOMScriptObjectFactory::Observe(nsISupports *aSubject,
 #ifdef MOZ_SVG
       xs->UnregisterExceptionProvider(this, NS_ERROR_MODULE_SVG);
 #endif
+      xs->UnregisterExceptionProvider(this, NS_ERROR_MODULE_XPCONNECT);
     }
   }
 
+  return NS_OK;
+}
+
+static nsresult
+CreateXPConnectException(nsresult aResult, nsIException *aDefaultException,
+                         nsIException **_retval)
+{
+  nsresult rv = NS_OK;
+  nsCOMPtr<nsIXPCException> exception(
+      do_CreateInstance("@mozilla.org/js/xpc/Exception;1", &rv));
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  rv = exception->Initialize(nsnull, aResult, nsnull, nsnull, nsnull, nsnull);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  NS_ADDREF(*_retval = exception);
   return NS_OK;
 }
 
@@ -210,6 +230,8 @@ nsDOMScriptObjectFactory::GetException(nsresult result,
     case NS_ERROR_MODULE_SVG:
       return NS_NewSVGException(result, aDefaultException, _retval);
 #endif
+    case NS_ERROR_MODULE_XPCONNECT:
+      return CreateXPConnectException(result, aDefaultException, _retval);
     default:
       return NS_NewDOMException(result, aDefaultException, _retval);
   }
